18/01/2024 - 1
==============
Crash related debug code addition 
New test cases addition


17/01/2024 - 2
==============
Logs update, some more stability improvements
astyle code beautification


17/01/2024 - 1
==============
Stability related fixes, addition of mutex, removal of atomic_int, changes to log messages.
Addition of sigprocmask, pthread_sigmask, changing size of buffer to MAXBUF
Removing all use of malloc and free and replacing it with new and delete.
IP address display fix


16/01/2024 - 2
==============
Stability fix, write changed to send , handling SIGPIPE, deletion of connection object is done differently


16/01/2024 - 1
==============
Added changes to logging.
Made some fixes wrt to server loop logic that involves skipping write part if there is a read error
Added connection object counter
Script changes to redirect logs to a file 
Log message changes 
REQ and RESP macro added to derefernce connection object versions of the same


15/01/2024 - 2
==============
Adding copyright information 
Adding logging functionality with granularity specification and updating fprintf to debuglog
Making changes to some of the log messages 
Making code file changes to use debuglog instead of fprintf
Making changes to the script file to specify loglevel, default is set to 1 (being lowest)


15/01/2024 - 1
==============
SSL supported added to "origin/sslsupport" branch
Bug fixes for SSL & ipv6 changes.
Code cleanup
Bug fixes for several crashes involving SSL and ipv6
Bug fix for DOS prevention failure withe ipv6 address


14/01/2024 - 2
==============
DOS prevention by using remote ip connection threshold.
Added support for IPv6 server listen socket, now http over IPv6 works.


14/01/2024 - 1
==============
Changes to test scripts so that it runs 100*50 wget requests for 7mb static image and p3 plugin post execution
Changes to server to run in static file server mode, where threadmanager, plugins and dynamic pages are disabled, operates like thttpd mode.